
syntax = "proto3";
option go_package = "github.com/WadeCappa/real_time_chat/chat-db/chat-db";
package chat_db;

service chatdb {
  rpc ReadMostRecent (ReadMostRecentRequest) returns (stream ReadMostRecentResponse) {}
}

message ReadMostRecentResponse {
  int64 channelId = 1;
  string message = 2;
  int64 userId = 3;
  int64 timePostedUnixTime = 4;
  int64 offset = 5;
}

message ReadMostRecentRequest {
  int64 channelId = 1;
}